# cmake-template

./: .clang-format  CMakeLists.txt  README.md  run.sh
.documentation/: projectStructur.drawio
CMakeExecutableTemplate/: CMakeLists.txt
CMakeExecutableTemplate/main/: CMakeLists.txt  main.cpp
CMakeExecutableTemplate/main/Module/: Module.hpp
CMakeExecutableTemplate/tests/: CMakeLists.txt
CMakeExecutableTemplate/tests/ModuleTests/: ModuleTest.cpp
CMakeStaticLibTemplate/: CMakeLists.txt
CMakeStaticLibTemplate/main/: CMakeLists.txt  Math.cpp
CMakeStaticLibTemplate/main/test/: Math.hpp
CMakeStaticLibTemplate/tests/: CMakeLists.txt
CMakeStaticLibTemplate/tests/ModuleTests/: ModuleTest.cpp
CMakeTemplate/main/: CMakeLists.txt  main.cpp
CMakeTemplate/tests/: CMakeLists.txt
